# Lumen

./: README.md
client/: README.md  implementation_plan.md  package-lock.json  package.json  proxy.ts
client/app/: layout.tsx  page.tsx
client/app/api/auth/sync/: route.ts
client/app/api/research/stream/: route.ts
client/app/api/sessions/: route.ts
client/app/api/sessions/[id]/: route.ts
client/app/api/sessions/[id]/messages/: route.ts
client/components/: sync-user-client.tsx  theme-provider.tsx
client/components/chat/: input-area.tsx  message-feed.tsx  sidebar.tsx  welcome-splash.tsx
client/lib/: hooks.ts
server/: README.md  main.py  pyproject.toml  requirements.txt
server/agents/: critic_agent.py  prompts.py  scraper_agent.py  search_agent.py  writer_agent.py
server/api/: db.py  main.py
server/graph/: graph.py  state.py  supervisor.py
server/schemas/: report.py
server/tools/: scraper.py  search.py
