[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "firecrawl-py>=4.32.0",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.10.3",
    "loguru>=0.7.3",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "tavily-python>=0.7.26",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
]
